# dsp-trabalho-final

./: .env  .env.example  .gitignore  README.md  pyproject.toml
src/: main.py  models.py
src/database/: infra.py  populate.py
src/dataset/: clean_dataset.py  favorecidos_clean.csv  municipios_clean.csv  programa_transferencia_clean.csv  programas_clean.csv  unidades_gestoras_clean.csv
src/routes/: analises.py  favorecido.py  municipio.py  programa.py  transferencia.py  unidade_gestora.py
src/services/: analises.py
