[project]
name = "dsp-trabalho-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "chardet>=5.2.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.8",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.23",
]
